# salt-lsp

./: .gitignore  .vscodeignore  README.md  TODO-Jinja.md  create_completion_classes.py  dev-requirements.txt  lsp_server.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-scan.yml  vscode_extension.yml
client/src/: extension.ts
clients/emacs/: salt-lsp.el
clients/vscode/src/: extension.ts
salt-lsp/: __main__.py  server.py
salt_lsp/: __init__.py  __main__.py  base_types.py  cmds.py  create_completion_classes.py  document_symbols.py  jinja_parser.py  parser.py  server.py  utils.py  workspace.py
tests/: conftest.py  test_ast.py  test_completions.py  test_document_symbols.py  test_find_ids.py  test_jinja_parser.py  test_parser.py  test_utils.py
