[tool.poetry]
name = "salt_lsp"
version = "0.0.1"
description = "Salt Language Server Protocol Server"
authors = ["Dan Čermák <dcermak@suse.com>", "Cédric Bosdonnat <cbosdonnat@suse.com>"]
license = "Apache-2.0"
include = ["salt_lsp/data/states.pickle"]

[tool.poetry.dependencies]
# remove the compat code from salt_lsp/workspace.py once we drop python 3.8 support
python = "^3.8, <3.12"
pygls = "^1.2"
PyYAML = "^6"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.3"
pytest-cov = ">=2.11.1"
black = ">=21.10b0"
mypy = ">=1.4.1"
pylint = ">=2.7.4"
pyfakefs = ">=4.4.0"
salt = "^3005"
pytest-testinfra = "^6.7.0"
types-PyYAML = "^6"

[tool.poetry.scripts]
salt_lsp_server = 'salt_lsp.__main__:main'
dump_state_name_completions = 'salt_lsp.cmds:dump_state_name_completions'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --cov=salt_lsp --cov-report term --cov-report html --cov-report xml --cov-branch"
xfail_strict = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
